# urauth

./: .gitignore  .pre-commit-config.yaml  GOALS.md  README.md  SECURITY.md  THREAT_MODEL.md  cliff.toml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json
.claude/skills/deploy-pkg/: SKILL.md
.claude/skills/improve-codebase-architecture/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: about.md  index.md
docs/.vitepress/: config.ts
docs/guide/: concepts.md  getting-started.md  index.md
docs/overview/: about.md  contributing.md  index.md  integrations.md  security.md
examples/fastapi-example/: app.db  pyproject.toml  pyrightconfig.json
examples/fastapi-example/app/: main.py
examples/fastapi-example/app/api/v1/endpoints/: admin.py  auth.py  sessions.py
examples/fastapi-example/app/core/: config.py
examples/fastapi-example/app/core/db/: base.py
examples/fastapi-example/app/core/security/: auth.py
examples/fastapi-example/app/crud/: user.py
examples/fastapi-example/app/models/: task.py
examples/fastapi-example/app/schemas/: task.py  user.py
examples/fastapi-example/app/services/: task.py
examples/task-manager-nuxt-frontend/: .env  .env.example  nuxt.config.ts  package.json
examples/task-manager-nuxt-frontend/.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  nuxt.node.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tsconfig.shared.json
scripts/: collect-docs.ts
(+27 files in other folders)
